# NEW_LOTO7

./: .gitignore  EVOLUTION_RESUME_DESIGN.md  GENERATION4.md  IMPLEMENTATION_STATUS_20260609.md  NEXTGEN_IMPLEMENTATION.md  README.md  _loto7_evolution_trainer_impl.py  export_latest_prediction_txt.py  holdout_evaluator.py  latest_loto7_prediction.txt  loto7.csv  loto7_advanced_optimizer.py  loto7_advanced_v2.py  loto7_backtest_detail.csv  loto7_backtest_report.txt  loto7_backtest_result.csv  loto7_backtest_result.txt  loto7_backtest_resume.json  loto7_backtest_summary.csv  loto7_best_model.json  loto7_best_model_shard00_of_04.json  loto7_best_model_shard00_of_08.json  loto7_best_model_shard01_of_04.json  loto7_best_model_shard01_of_08.json  loto7_best_model_shard02_of_04.json  loto7_best_model_shard02_of_08.json  loto7_best_model_shard03_of_04.json  loto7_best_model_shard03_of_08.json  loto7_best_model_shard04_of_08.json  loto7_best_model_shard05_of_08.json  loto7_best_model_shard06_of_08.json  loto7_best_model_shard07_of_08.json  loto7_chunked_backtest.py  loto7_complete_ai_system.py  loto7_deep_ai.py  loto7_enhanced_predictor.py  loto7_evaluate_backtest.py  loto7_evolution_trainer.py  loto7_hit_structure_clusters.csv  loto7_logic_predictor.py  (+29 more)
config/: output_layout.json  repository_layout.json
outputs/: README.md  evolution_best_prediction.csv  evolution_best_prediction_shard00_of_04.csv  evolution_best_prediction_shard00_of_08.csv  evolution_best_prediction_shard01_of_04.csv  evolution_best_prediction_shard01_of_08.csv  evolution_best_prediction_shard02_of_04.csv  (+71 more)
(+398 files in other folders)
